<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cvItemRepository"
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:contentDescription="@string/image_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvNameItemRepository"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_30dp"
        android:text="@string/repository_dummy"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cvItemRepository"
        app:layout_constraintTop_toTopOf="@+id/cvItemRepository" />

    <TextView
        android:id="@+id/tvDescItemRepository"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_30dp"
        android:text="@string/desc_repository_dummy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvNameItemRepository"
        app:layout_constraintTop_toBottomOf="@+id/tvNameItemRepository" />

    <TextView
        android:id="@+id/tvStarItemRepository"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:text="@string/star_dummy"
        android:textSize="@dimen/_10sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintStart_toStartOf="@+id/tvDescItemRepository"
        app:layout_constraintTop_toBottomOf="@+id/tvDescItemRepository"
        app:srcCompat="@drawable/ic_outline_star_outline_24"
        android:contentDescription="@string/image_view" />

    <TextView
        android:id="@+id/tvUpdateItemRepository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/update_dummy"
        android:textSize="@dimen/_10sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvStarItemRepository"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/tvStarItemRepository"
        app:layout_constraintTop_toTopOf="@+id/tvStarItemRepository"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/grey_300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>